[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/scene_compositor/ui/controls/SliderControl.gd" type="Script" id=1]
[ext_resource path="res://addons/scene_compositor/core/base/BaseControl.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/scene_compositor/ui/controls/ScalarControl.tscn" type="PackedScene" id=3]

[node name="SliderControl" instance=ExtResource( 2 )]
margin_right = 75.0
margin_bottom = 36.0
script = ExtResource( 1 )
value = 0.0
slider/max_value = 100.0
slider/min_value = 0.0
slider/step = 0.01

[node name="Layout" type="VBoxContainer" parent="." index="0"]
margin_right = 95.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 593.705, 228.083 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scalar" parent="Layout" index="0" instance=ExtResource( 3 )]
margin_right = 95.0
margin_bottom = 45.0

[node name="Slider" type="HSlider" parent="Layout" index="1"]
margin_top = 41.0
margin_right = 95.0
margin_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 1
step = 0.01
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="Layout/Scalar" to="." method="_on_Scalar_value_changed"]
[connection signal="value_changed" from="Layout/Slider" to="." method="_on_Slider_value_changed"]
